0.6.0
 - ThreadStorm#execution can now take an execution instance.
 - ThreadStorm::Execution.new to create an execution in the :new state.
 - Execution states (:new, :queued, :started, :finished)
 - Changed Execution#duration to return nil if the execution is not in the :started or :finished state.

0.5.1
 - Fixed crash when calling Execution#duration before it has started.
 - ThreadStorm#clear_executions can now take no arguments at all.
 - Execution#value implicitly calls Execution#join.

0.5.0
 - Refactored to use Monitor.
 - Implemented ThreadStorm#clear_executions.
 - Implemented the :execute_blocks option.
 
0.4.0
 - Renamed to thread_storm... ugh.
 - Simplified the shutdown process by using my own thread safe queue.
 - Removed timing based tests.
 - Much more efficient ThreadStorm#join.
 - Added Execution#join.
 - Configurable Timeout implementation.

0.3.0
 - PoolParty#new now takes an optional block.
 
0.2.0
 - Renamed to pool_party.
 - Fixed PoolParty#shutdown for real.

0.1.1
  - Fixed ThreadPool#shutdown.

0.1.0
 - Initial version