@@ -1,4 +1,5 @@
 0.6.0
+ - Removed ThreadStory#busy_workers.
  - ThreadStorm#execution can now take an execution instance.
  - ThreadStorm::Execution.new to create an execution in the :new state.
  - Execution states (:new, :queued, :started, :finished)
